add library publish setting

--- a/flinglayout/build.gradle
+++ b/flinglayout/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
 
 def androidProperties = rootProject.ext.androidProperties
 
